# rgd

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  release-plz.toml  rustfmt.toml
.github/workflows/: audit.yml  cd-binaries.yml  cd.yml  ci.yml
assets/: demo.tape
extras/: README.md  rgd_bemenu.sh  rgd_dmenu.sh  rgd_fuzzel.sh  rgd_fzf.sh  rgd_rofi.sh  rgd_tofi.sh  rgd_wofi.sh  rgd_yofi.sh
src/: cli.rs  data.rs  logging.rs  main.rs  utils.rs
src/handlers/: get.rs  list.rs  mod.rs  utils.rs
